# search-suite

./: .gitignore  .gitmodules  README.md  bench.sh  build.sh  notes  run.sh  stack.yaml
WebArchive/: WebArchive.cabal
WebArchive/src/Data/Warc/: Header.hs  Value.hs  WarcEntry.hs
benchmark/: benchmark.cabal
capabilities/exception/: exception.cabal
capabilities/file/: file.cabal
capabilities/file/File/: File.hs
crawler/: crawler.cabal
crawler-lib/: CHANGELOG.md  crawler-lib.cabal
crawler-lib/src/: Metrics.hs  Url.hs
crawler-lib/src/Errors/: Errors.hs
crawler-lib/src/Job/: YamlJobs.hs
crawler-lib/src/Network/: Fetcher.hs  Poster.hs
crawler-lib/src/Page/: Scrape.hs
crawler-lib/src/Pipeline/: AllowedUrls.hs  FrontierTypes.hs  Processor.hs  SqlTimedFrontier.hs  TimedFrontier.hs
crawler-lib/src/Storage/: MultiMap.hs  Store.hs  WarcFileWriter.hs
crawler/eg/: news.yaml  news2.yaml  unis.yaml
crawler/src/: Main.hs  Settings.hs
crawler/src/Client/: SearchApiClient.hs  Types.hs
crawler/src/Job/: YamlJobs.hs
crawler/src/Pipeline/: FrontierTypes.hs  Processor.hs
crawler/test/: Tests.hs
crawler2/: CHANGELOG.md  crawler2.cabal
crawler2/capabilities/: Restful.hs
crawler2/capabilities/Frontier/: Class.hs  InMemFrontier.hs  PoliteStmFrontier.hs  StmFrontier.hs
crawler2/capabilities/Multithread/: Class.hs
crawler2/capabilities/Restful/: Class.hs  IO.hs  Types.hs
crawler2/capabilities/Time/: Class.hs
crawler2/lib/: Crawler.hs  Fetcher.hs  Scrape.hs
crawler2/lib/Crawler/: Class.hs  MultiCrawler.hs
crawler2/lib/Frontier/: Class.hs  MultiplexedFrontier.hs  PoliteStmFrontier.hs
crawler2/src/: Main.hs
crawler2/test/: Test.hs
crawler3/: Dockerfile  crawler3.cabal
crawler3/eg/: jobs.yaml  unis.yaml
crawler3/src/: Main.hs  Settings.hs  Url.hs
crawler3/src/Job/: YamlJobs.hs
crawler3/src/Network/: Fetcher.hs  Poster.hs
crawler3/src/Page/: Page.hs  Scrape.hs
crawler3/src/Pipeline/: AllowedUrls.hs  FrontierTypes.hs  Processor.hs  SqlTimedFrontier.hs  TimedFrontier.hs
crawler3/src/Reporter/: Reporter.hs
crawler3/src/Storage/: Store.hs  WarcFileWriter.hs
crawler3/test/: Tests.hs
deploy/: Dockerfile
frontend/: common.ts  index.css  (+7 more)
frontend-next/: index-next.html  results.html
indexer-qp2/: Cargo.toml  Dockerfile  code-coverage.sh  terminal-code-coverage.sh
indexer-qp2/eg/: input1  input2
indexer-qp2/src/: bk_tree.rs  byte_tests.rs  bytes.rs  deletions.rs  doc.rs  dump.rs  index.rs  index_reader.rs  index_writer.rs  input.rs  lib.rs  main.rs  normalise.rs  query.rs  ranking.rs  spelling_correction.rs  system_tests.rs  terms.rs  types.rs  verify.rs  write_to_buf.rs
indexer-qp2/src/merge/: common_docids.rs  common_urls.rs  merge.rs  mod.rs  util.rs
indexer-qp2/test/: bk_tree_tests.rs  byte_tests.rs  deletions_tests.rs  doc_test.rs  input_tests.rs  mod.rs  normalise_tests.rs  ranking_tests.rs  spelling_correction_tests.rs  system_tests.rs  util.rs
search-libs/: search-lib.cabal
search-libs/Search/: Search.hs
search-libs/compactor/: compactor.cabal
search-libs/compactor/Compactor/: Compactor.hs  Strategy.hs
search-libs/environment/: environment.cabal
search-libs/environment/Environment/: Environment.hs  EnvironmentShim.hs
search-libs/exception/Exception/: Exception.hs
search-libs/importer/: importer.cabal
search-libs/indexer/: indexer.cabal
search-libs/indexer/Indexer/: Indexer.hs
search-libs/metadata/: metadata.cabal
search-libs/metadata/Metadata/: Metadata.hs
search-libs/parser/: parser.cabal
search-libs/parser/Parser/: Combinators.hs  LineLexer.hs  Parser.hs
search-libs/query-processor/: query-processor.cabal
search-libs/query-processor/QueryProcessor/: QueryParser.hs  QueryProcessor.hs  QueryProcessorTypes.hs
search-libs/registry/: registry.cabal
search-libs/registry/Registry/: Registry.hs
search-libs/search/: search.cabal
search-libs/search-types/: search-types.cabal
search-libs/search-types/SearchTypes/: Types.hs
search-libs/search/Search/: Search.hs
search-libs/test/: Main.hs
search-libs/util/: util.cabal
search-libs/util/Util/: BinarySearch.hs  TimingInfo.hs
search-libs/warc/: warc.cabal
search-libs/warc/Warc/: WarcFileReader.hs  WarcFileWriter.hs
search-web/: LICENSE  search-web.cabal
search-web/Controller/: Collections.hs  Controller.hs  Diagnostic.hs  Indexation.hs  Mime.hs  Query.hs
searchapi3/: CHANGELOG.md  Dockerfile  searchapi3.cabal
searchapi3/dist-newstyle/cache/: compiler  config
searchapi3/src/: Api.hs  Bench.hs  Bin.hs  Compactor.hs  CompactorStrategy.hs  Component.hs  Controller.hs  Environment.hs  Importer.hs  ImporterTypes.hs  Indexer.hs  IndexerTypes.hs  Logger.hs  Main.hs  Metadata.hs  QueryParams.hs  QueryProcessor.hs  QueryProcessorTypes.hs  Registry.hs  Service.hs  Snippets.hs  TimingInfo.hs  Types.hs  WarcFileReader.hs  WarcFileWriter.hs
searchapi3/src/Controllers/: Collections.hs  Controller.hs  Diagnostic.hs  GitIndexation.hs  Indexation.hs  Mime.hs  Query.hs  WarcIndexation.hs
searchapi3/src/Extensions/: GitIndexer.hs  WarcIndexer.hs
searchapi3/src/Parser/: Combinators.hs  LineLexer.hs  Parser.hs  Transformer.hs
searchapi3/src/Query/: QueryCommon.hs  QueryParams.hs  QueryParser.hs  QueryProcessor.hs  QueryProcessorTypes.hs  SpellingProcessor.hs  StructuredProcessor.hs
searchapi3/src/Util/: BinarySearch.hs
searchapi3/test/: Tests.hs
searchapi3/test/Util/: BinarySearchTests.hs
shared-proto/: Cargo.toml  shared-proto.cabal
shared-proto/haskell/: Encode.hs  Example.hs  ProtocolTypes.hs  SharedProto.hs
shared-proto/haskell/Protocol/: Encode.hs  Example.hs  ImporterTypes.hs  Types.hs
shared-proto/rust/: shared_proto.rs
shared-proto/rust/protocol/: encode.rs  mod.rs  types.rs
util/compress/: ChangeLog.md  LICENSE  compress.cabal
util/compress/src/: Main.hs
util/filecrawler/: ChangeLog.md  filecrawler.cabal
util/filecrawler/src/: Main.hs  Types.hs
util/filewatcher/: CHANGELOG.md  LICENSE  Main.hs  filewatcher.cabal
util/warccrawler/: CHANGELOG.md  LICENSE  warccrawler.cabal
util/warccrawler/src/: Main.hs
(+33 files in other folders)
