name:                WebArchive
version:             0.3.2.0
synopsis:            Library for dealing with WebArchive (WARC) files
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Warc.Common
                       Data.Warc.Parse
                       Data.Warc.Value
                       Data.Warc.HeaderLine
                       Data.Warc.Key
                       Data.Warc.Header
                       Data.Warc.Shared
                       Data.Warc.WarcEntry
                       Data.Warc.Body

  ghc-options:	       -O3 -Wall
  build-depends:       attoparsec, base, bytestring, deepseq, zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
