cabal-version:       2.4
name:                crawler-lib
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    aeson,
                    async,
                    base,
                    bytestring,
                    case-insensitive,
                    containers,
                    crypton-connection,
                    cryptohash-md5,
                    data-default,
                    directory,
                    extra,
                    hashable,
                    http-client,
                    http-client-tls,
                    http-types,
                    list-t,
                    network-uri,
                    regex-tdfa,
                    safe,
                    safe-exceptions,
                    split,
                    sqlite-simple,
                    stm,
                    stm-containers,
                    tagsoup,
                    text,
                    time,
                    tls,
                    transformers,
                    uuid,
                    yaml,
                    WebArchive
  ghc-options:      -Wall -O3
  exposed-modules:  Client.SearchApiClient
                    Errors.Errors
                    Job.YamlJobs
                    Network.Fetcher
                    Page.Scrape
                    Page.Page
                    Pipeline.AllowedUrls
                    Pipeline.FrontierTypes
                    Pipeline.Processor
                    Pipeline.SqlTimedFrontier
                    Pipeline.TimedFrontier
                    Storage.MultiMap
                    Storage.Store
                    Storage.WarcFileWriter
                    Url
  other-modules:    Client.Types
                    Metrics
                    Network.Poster
                    Settings
  hs-source-dirs:   src
  default-language: Haskell2010
