cabal-version:       2.4
name:                crawler
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable crawler
  build-depends:    aeson,
                    async,
                    base,
                    bytestring,
                    case-insensitive,
                    containers,
                    cryptohash-md5,
                    directory,
                    extra,
                    hashable,
                    http-client,
                    http-client-tls,
                    http-types,
                    list-t,
                    network-uri,
                    regex-tdfa,
                    safe,
                    safe-exceptions,
                    split,
                    sqlite-simple,
                    stm,
                    stm-containers,
                    tagsoup,
                    text,
                    time,
                    transformers,
                    uuid,
                    yaml,
                    WebArchive
  ghc-options:      -Wall -O3 -threaded
  main-is:          Main.hs
  other-modules:    Client.SearchApiClient,
                    Client.Types,
                    Job.YamlJobs,
                    Metrics,
                    Network.Poster,
                    Pipeline.AllowedUrls,
                    Pipeline.FrontierTypes,
                    Pipeline.Processor,
                    Pipeline.TimedFrontier,
                    Pipeline.SqlTimedFrontier,
                    Reporter.Reporter,
                    Storage.MultiMap,
                    Storage.Store,
                    Storage.WarcFileWriter,
                    Settings
  build-depends:    crawler-lib
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-crawler
    ghc-options:      -Wall -O3
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    other-modules:    Gen.Time
    build-depends:    crawler-lib, hedgehog
    hs-source-dirs:   test
    default-language: Haskell2010