cabal-version:       2.4
name:                crawler
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  build-depends:    base, crawler-lib, stm, time

executable crawler
  import:           deps
  build-depends:    aeson,
                    async,
                    bytestring,
                    directory,
                    extra,
                    http-client,
                    http-types,
                    safe-exceptions,
                    split,
                    text,
                    transformers,
                    yaml
  ghc-options:      -Wall -O3 -threaded
  main-is:          Main.hs
  other-modules:    Reporter.Reporter
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-crawler
    import:           deps
    ghc-options:      -Wall -O3
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    other-modules:    Gen.Time
    build-depends:    hedgehog
    hs-source-dirs:   test
    default-language: Haskell2010