cabal-version:      3.0
name:               crawler2
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall -O2 -threaded

library capabilities
    import:           common
    exposed-modules:  Restful.Class
                      Restful.IO
                      Restful.Types
    build-depends:    base,
                      bytestring,
                      deepseq,
                      http-client,
                      http-types,
                      safe-exceptions,
                      string-interpolate,
                      text
    hs-source-dirs:   capabilities
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  Crawler
    build-depends:    base,
                      capabilities,
                      http-client,
                      safe-exceptions,
                      transformers,
                      text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable crawler2
    import:           common
    main-is:          Main.hs
    build-depends:    base,
                      crawler2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite crawler2-test
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base,
                      capabilities,
                      crawler2,
                      text,
                      transformers
