cabal-version:      3.0
name:               crawler2
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall -O2 -threaded

library capabilities
    import:           common
    exposed-modules:  Frontier.Class
                      Frontier.InMemFrontier
                      Multithread.Class
                      Restful.Class
                      Restful.IO
                      Restful.Types
    build-depends:    base,
                      bytestring,
                      containers,
                      deepseq,
                      http-client,
                      http-types,
                      network-uri,
                      safe-exceptions,
                      string-interpolate,
                      text
    hs-source-dirs:   capabilities
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  Crawler
                      Scrape
    build-depends:    async,
                      base,
                      bytestring,
                      capabilities,
                      http-client,
                      safe-exceptions,
                      tagsoup,
                      transformers,
                      text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable crawler2
    import:           common
    main-is:          Main.hs
    build-depends:    base,
                      bytestring,
                      capabilities,
                      crawler2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite crawler2-test
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base,
                      capabilities,
                      crawler2,
                      text,
                      transformers
