cabal-version:       2.2
name:                crawler3
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  default-language: Haskell2010
  build-depends:    aeson,
                    async,
                    base,
                    bytestring,
                    case-insensitive,
                    containers,
                    cryptohash-md5,
                    directory,
                    extra,
                    hashable,
                    http-client,
                    http-client-tls,
                    http-types,
                    list-t,
                    network-uri,
                    regex-tdfa,
                    safe,
                    safe-exceptions,
                    split,
                    sqlite-simple,
                    stm,
                    stm-containers,
                    tagsoup,
                    text,
                    time,
                    transformers,
                    uuid,
                    yaml,
                    WebArchive

library crawler3-internal
  import:           deps
  ghc-options:      -Wall -O3
  exposed-modules:  Client.SearchApiClient,
                    Client.Types,
                    Errors.Errors,
                    Job.YamlJobs,
                    Metrics,
                    Network.Fetcher,
                    Network.Poster,
                    Page.Scrape,
                    Page.Page,
                    Pipeline.AllowedUrls,
                    Pipeline.FrontierTypes,
                    Pipeline.Processor,
                    Pipeline.TimedFrontier,
                    Pipeline.SqlTimedFrontier,
                    Reporter.Reporter,
                    Settings,
                    Storage.MultiMap,
                    Storage.Store,
                    Storage.WarcFileWriter,
                    Url
  hs-source-dirs:   src
  default-language: Haskell2010

executable crawler3
  import:           deps
  ghc-options:      -Wall -O3 -threaded
  main-is:          Main.hs
  other-modules:    Client.SearchApiClient,
                    Client.Types,
                    Errors.Errors,
                    Job.YamlJobs,
                    Metrics,
                    Network.Fetcher,
                    Network.Poster,
                    Page.Scrape,
                    Page.Page,
                    Pipeline.AllowedUrls,
                    Pipeline.FrontierTypes,
                    Pipeline.Processor,
                    Pipeline.TimedFrontier,
                    Pipeline.SqlTimedFrontier,
                    Reporter.Reporter,
                    Storage.MultiMap,
                    Storage.Store,
                    Storage.WarcFileWriter,
                    Settings,
                    Url
  build-depends:    crawler3-internal
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-crawler3
    import:           deps
    ghc-options:      -Wall -O3
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    other-modules:    Gen.Time
    build-depends:    crawler3-internal, hedgehog
    hs-source-dirs:   test
    default-language: Haskell2010