[package]
name = "indexer-qp2"
version = "0.1.0"
authors = ["John Haynes <john.andrew.haynes@gmail.com>"]

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.25"
intmap = "2.0.0"
itertools = "0.10.5"
memmap = "0.7.0"
num = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }

