[package]
name = "indexer-qp2"
version = "0.1.0"
authors = ["John Haynes <john.andrew.haynes@gmail.com>"]

[dependencies]
byteorder = "1.5.0"
edit-distance = "2.1.3"
flate2 = "1.1.0"
intmap = "3.1.0"
itertools = "0.14.0"
memmap = "0.7.0"
num = "0.4.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }

