[package]
name = "indexer-qp2"
version = "0.1.0"
authors = ["John Haynes <john.andrew.haynes@gmail.com>"]
edition = "2021"

[dependencies]
shared-proto = { path = "../shared-proto" }

byteorder = "1.5.0"
edit-distance = "2.1.3"
flate2 = "1.1.2"
intmap = "3.1.2"
itertools = "0.14.0"
memmap = "0.7.0"
num = "0.4.3"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.18.1", features = ["v4"] }

