cabal-version:      3.0
name:               search-lib
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

-----------------------

common common
    ghc-options: -Wall -O2
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  Search.Search
    build-depends:    base, environment, exception, text, transformers, warc

test-suite search-lib-test
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        search-lib,
        transformers, string-interpolate, text
