cabal-version:      3.0
name:               search-web
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -threaded -O2

executable search-web
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
