cabal-version:       3.0
name:                searchapi3
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
extra-source-files:  CHANGELOG.md
build-type:          Simple

common deps
  build-depends:       aeson, async, base, binary, bytestring, crawler-lib, cereal, compactor, containers, deepseq, directory, environment, hashable, heaps, http-media, lens, parser, process, process-extras, resourcet, safe, safe-exceptions, search-types, serialise, servant, servant-server, servant-swagger, servant-swagger-ui, shared-proto, split, stm, stm-containers, swagger2, tagsoup, temporary, text, time, transformers, unliftio, util, uuid, vector, wai-cors, wai-middleware-prometheus, warc, warp, WebArchive

library
  import:              deps
  ghc-options:         -Wall -O2
  exposed-modules:     Api,
                       Compactor,
                       Controllers.Collections,
                       Controllers.Controller,
                       Controllers.Diagnostic,
                       Controllers.Indexation,
                       Controllers.Mime,
                       Controllers.Query,
                       Importer,
                       ImporterTypes,
                       Indexer,
                       Metadata,
                       Query.QueryParser,
                       Query.QueryParams,
                       Query.QueryProcessor,
                       Query.QueryProcessorTypes,
                       Registry
  hs-source-dirs:      src
  default-language:    Haskell2010

executable searchapi3
    import:           deps
    ghc-options:      -Wall -threaded -O2
    build-depends:    searchapi3
    other-modules:    Api,
                      Compactor,
                      Controllers.Collections,
                      Controllers.Controller,
                      Controllers.Diagnostic,
                      Controllers.Indexation,
                      Controllers.Mime,
                      Controllers.Query,
                      Importer,
                      ImporterTypes,
                      Indexer,
                      Metadata,
                      Query.QueryParams,
                      Query.QueryParser,
                      Query.QueryProcessor,
                      Query.QueryProcessorTypes,
                      Registry
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-searchapi3
    import: deps
    build-depends:    searchapi3, vector-algorithms
    other-modules:    Util.BinarySearchTests
    ghc-options:      -Wall -threaded -O2
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base, hedgehog
    hs-source-dirs:   test
    default-language: Haskell2010
