cabal-version:       3.0
name:                searchapi3
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
extra-source-files:  CHANGELOG.md
build-type:          Simple

common deps
  build-depends: base,
                 bytestring,
                 compactor,
                 crawler-lib,
                 directory,
                 environment,
                 importer,
                 indexer,
                 metadata,
                 query-processor,
                 registry,
                 search-types,
                 search-web,
                 warc

library
    import:              deps
    ghc-options:         -Wall -O2
    hs-source-dirs:      src
    default-language:    Haskell2010

executable searchapi3
    import:           deps
    ghc-options:      -Wall -threaded -O2
    build-depends:    searchapi3
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-searchapi3
    import: deps
    build-depends:    searchapi3, vector-algorithms
    other-modules:    Util.BinarySearchTests
    ghc-options:      -Wall -threaded -O2
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base, hedgehog
    hs-source-dirs:   test
    default-language: Haskell2010
