cabal-version:      3.0
name:               file
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, resourcet
    exposed-modules:  File
    hs-source-dirs:   File
    default-language: Haskell2010
