cabal-version:      3.0
name:               compactor
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, containers, search-types
    exposed-modules:  Strategy
    hs-source-dirs:   Compactor
    default-language: Haskell2010
