cabal-version:      3.0
name:               environment
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, bytestring, directory, search-types, split, transformers
    exposed-modules:  Environment
                      EnvironmentShim
    hs-source-dirs:   Environment
    default-language: Haskell2010
