cabal-version:      3.0
name:               indexer
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, bytestring, compactor, containers, environment, metadata, process-extras, registry, resourcet, search-types, shared-proto, stm, temporary, text, unliftio, vector, warc, WebArchive
    exposed-modules:  Indexer
    hs-source-dirs:   Indexer
    default-language: Haskell2010
