cabal-version:      3.0
name:               query-processor
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

-- TODO get the swagger out of here

library
    ghc-options:      -Wall -O2
    build-depends:    aeson, async, base, bytestring, containers, deepseq, environment, heaps, lens, metadata, parser, process-extras, registry, safe-exceptions, search-types, stm, swagger2, text, unliftio, vector
    exposed-modules:  QueryParams
                      QueryParser
                      QueryProcessor
                      QueryProcessorTypes
    hs-source-dirs:   QueryProcessor
    default-language: Haskell2010
