cabal-version:      3.0
name:               search-types
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

-- TODO too much dependency.  especially servant, aeson, swagger

library
    ghc-options:      -Wall -O2
    build-depends:    aeson, base, deepseq, directory, hashable, text, servant, swagger2
    exposed-modules:  Component
                      Types
    hs-source-dirs:   SearchTypes
    default-language: Haskell2010

-- exposed too general
