cabal-version:      3.0
name:               search
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, environment, exception, text, transformers
    exposed-modules:  Search
    hs-source-dirs:   Search
    default-language: Haskell2010
