cabal-version:      3.0
name:               util
version:            0.1.0.0
license:            Apache-2.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall -O2
    build-depends:    base, containers, text, time
    exposed-modules:  BinarySearch
                      TimingInfo
    hs-source-dirs:   Util
    default-language: Haskell2010
