name:                compress
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable compress
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  build-depends:       base, bytestring, WebArchive
  hs-source-dirs:      src
  default-language:    Haskell2010
