name:                filecrawler
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable filecrawler
  main-is:             Main.hs
  other-modules:       Types
  ghc-options:         -O2 -Wall -threaded
  build-depends:       aeson, async, base, bytestring, conduit, hostname, http-client, http-types, resourcet, split, text, WebArchive
  hs-source-dirs:      src
  default-language:    Haskell2010
