cabal-version:       >=1.10

name:                filewatcher
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable filewatcher
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       aeson, base, bytestring, http-client, http-types, fsnotify, text
  default-language:    Haskell2010
