name:                warccrawler
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable warccrawler
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  build-depends:       aeson,
                       async,
                       base,
                       bytestring,
                       deepseq,
                       http-client,
                       http-types,
                       safe-exceptions,
                       split,
                       text,
                       transformers,
                       WebArchive
  hs-source-dirs:      src
  default-language:    Haskell2010
